--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -1,2 +1,4 @@
+# Use SKS Keyserver pools
 keyserver hkps://hkps.pool.sks-keyservers.net
 keyserver-options ca-cert-file=~/.certs/sks-keyservers.netCA.pem
+keyserver-options no-honor-keyserver-url
