Add configs for gpg

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -1,4 +1,17 @@
-# Use SKS Keyserver pools
+# Use SKS Keyserver pools 
 keyserver hkps://hkps.pool.sks-keyservers.net
 keyserver-options ca-cert-file=~/.certs/sks-keyservers.netCA.pem
+
+# All keys should be refreshed through the above selected keyserver
 keyserver-options no-honor-keyserver-url
+
+# Automatically get missing keys from keyserver
+keyserver-options auto-key-retrieve
+
+# Signatures should use SHA2 512bit
+cert-digest-algo SHA512
+
+# For ciphering, these algos should be used (in descending order)
+personal-cipher-preferences AES256 AES192 AES
+
+
