Add some preferences + gitignores

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -1,3 +1,29 @@
+# default key
+
+# You know me - I love UTF-8
+display-charset utf-8
+
+# Don't disclose version in signature
+no-emit-version
+
+# Don't add additional comments (may leak language, etc.)
+no-comments
+
+# Supress initial copyright message
+no-greeting
+
+# Fixed list mode, clearly spacing ID and key
+fixed-list-mode
+
+# Always list with finger print
+with-fingerprint
+
+# Display validity of keys and uids
+list-options show-uid-validity
+verify-options show-uid-validity
+
+# Use gpg agent, which caches the passphrase for some time
+use-agent
 # Use SKS Keyserver pools 
 keyserver hkps://hkps.pool.sks-keyservers.net
 keyserver-options ca-cert-file=~/.certs/sks-keyservers.netCA.pem
@@ -8,10 +34,15 @@ keyserver-options no-honor-keyserver-url
 # Automatically get missing keys from keyserver
 keyserver-options auto-key-retrieve
 
+# Also get revoked keys (maybe still needed to decrypt and verifyl old mails)
+keyserver-options include-revoked
+
 # Signatures should use SHA2 512bit
 cert-digest-algo SHA512
 
 # For ciphering, these algos should be used (in descending order)
-personal-cipher-preferences AES256 AES192 AES
+personal-cipher-preferences AES256 CAMELLIA256 AES192 CAMELLIA192 AES CAMELLIA128
 
+# For signing, these algos should be used (in descending order)
+personal-digest-preferences SHA512 SHA384 SHA256 
 
