--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -1,4 +1,5 @@
 # default key
+default-key B0A04E694A27430123023CC7E44AA0797153D04F
 
 # You know me - I love UTF-8
 display-charset utf-8
@@ -24,9 +25,10 @@ verify-options show-uid-validity
 
 # Use gpg agent, which caches the passphrase for some time
 use-agent
+
 # Use SKS Keyserver pools 
+auto-key-locate cert pka ldap hkps://hkps.pool.sks-keyservers.net 
 keyserver hkps://hkps.pool.sks-keyservers.net
-keyserver-options ca-cert-file=~/.certs/sks-keyservers.netCA.pem
 
 # All keys should be refreshed through the above selected keyserver
 keyserver-options no-honor-keyserver-url
