Add ask-cert-level to config and add a signed key-signing-policy

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -13,6 +13,9 @@ no-comments
 # Supress initial copyright message
 no-greeting
 
+# ask for verification level when signing a key
+ask-cert-level
+
 # Fixed list mode, clearly spacing ID and key
 fixed-list-mode
 
