Add GPG temporary files to gitignore

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -20,11 +20,11 @@ ask-cert-level
 fixed-list-mode
 
 # Always list with finger print
-with-fingerprint
+#with-fingerprint
 
 # Display validity of keys and uids
-list-options show-uid-validity
-verify-options show-uid-validity
+#list-options show-uid-validity
+#verify-options show-uid-validity
 
 # Use gpg agent, which caches the passphrase for some time
 use-agent
