--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -3,6 +3,7 @@ default-key B0A04E694A27430123023CC7E44AA0797153D04F
 
 # You know me - I love UTF-8
 display-charset utf-8
+utf8-strings
 
 # Don't disclose version in signature
 no-emit-version
@@ -13,18 +14,14 @@ no-comments
 # Supress initial copyright message
 no-greeting
 
-# ask for verification level when signing a key
-ask-cert-level
-
 # Fixed list mode, clearly spacing ID and key
 fixed-list-mode
 
 # Always list with finger print
-#with-fingerprint
+with-fingerprint
 
-# Display validity of keys and uids
-#list-options show-uid-validity
-#verify-options show-uid-validity
+# Display validity of keys
+list-options show-uid-validity
 
 # Use gpg agent, which caches the passphrase for some time
 use-agent
@@ -51,3 +48,20 @@ personal-cipher-preferences AES256 CAMELLIA256 AES192 CAMELLIA192 AES CAMELLIA12
 # For signing, these algos should be used (in descending order)
 personal-digest-preferences SHA512 SHA384 SHA256 
 
+# Signature policy
+#cert-policy-url 
+
+# ask for verification level when signing a key
+ask-cert-level
+
+# Calling gpg --verify for a signed document, shows signers:
+# photo, policy url, notations on signature, UID validity
+verify-options show-photos show-policy-urls show-notations show-uid-validity
+
+# Calling --list-[public|private]-keys, --list-sigs, --edit-key, show key owerns:
+# photo, policy url, notations on signature, UID validity
+list-options show-photos show-policy-urls show-notations show-uid-validity
+
+# Cross certification "back signature" for subkeys are evaluated, to protect
+# against subtle attack against subkeys capable of signing
+require-cross-certification
