Removed photo ID as it's really annoying with Mac

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -56,11 +56,11 @@ ask-cert-level
 
 # Calling gpg --verify for a signed document, shows signers:
 # photo, policy url, notations on signature, UID validity
-verify-options show-photos show-policy-urls show-notations show-uid-validity
+verify-options show-policy-urls show-notations show-uid-validity
 
 # Calling --list-[public|private]-keys, --list-sigs, --edit-key, show key owerns:
 # photo, policy url, notations on signature, UID validity
-list-options show-photos show-policy-urls show-notations show-uid-validity
+list-options show-policy-urls show-notations show-uid-validity
 
 # Cross certification "back signature" for subkeys are evaluated, to protect
 # against subtle attack against subkeys capable of signing
