Add header to config file

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -1,3 +1,6 @@
+#Author:	Kannan Thambiah <pygospa@gmail.com>
+#Copyright:	CC BY-SA 4.0 <http://creativecommons.org/licenses/by-sa/4.0>
+
 # default key
 default-key B0A04E694A27430123023CC7E44AA0797153D04F
 
