--- a/.gitmodules
+++ b/.gitmodules
@@ -62,3 +62,6 @@
 	path = vim/bundle/xml
 	url = git@github.com:othree/xml.vim.git
 
+[submodule "vim/bundle/slimv"]
+	path = vim/bundle/slimv
+	url = git@github.com:kovisoft/slimv.git
