Remove OS X settings

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,7 +23,7 @@ set -g message-bg default
 
 # Paul Hinzes hack for vim and tmux under OS X
 # (see
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 
 
