Add personal fork of zsh-vcs-prompt

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "vim/bundle/YouCompleteMe"]
 	path = vim/bundle/YouCompleteMe
 	url = git@github.com:Valloric/YouCompleteMe.git
+[submodule "zsh-vcs-prompt"]
+	path = zsh-vcs-prompt
+	url = git@github.com:pygospa/zsh-vcs-prompt.git
