Move mouse behavior to own file
Also enhance mouse behavior. Most important tool for me is the terminal,
so rightclicking the desktop will spawn a new terminal window.
Leftclicking stays as it is, and middle click will open an overview
with all open windows. This way, after middelclicking, one can scroll
through the list and easily get the window in front that one needs.

--- a/fvwm/config
+++ b/fvwm/config
@@ -8,3 +8,4 @@
 # Copyright:		CC BY-SA 4.0 <http://creativecommons.org/licenses/by-sa/4.0>
 # Latest Version:	github.com/pygospa/dotfiles	
 
+Read mouse
