--- a/fvwm/mouse.conf
+++ b/fvwm/mouse.conf
@@ -1,4 +1,4 @@
-# File			~/.fvwm/mouse
+# File			~/.fvwm/mouse.conf
 #
 # Purpose		contains all mouse bindings
 #			syntax:
@@ -40,7 +40,7 @@
 # left click:	Open main window
 # right click:  Open new aterm window
 # middle click: Open window list
-Mouse 1 R A Menu ProgrammMenu
+Mouse 1 R A Menu RootMenu
 Mouse 2 R A WindowList Root NoGeometry
 Mouse 3 R A Exec aterm
 
