Refactor submenu readin
When removing or adding submenus, now only the root menu needs to be modified (to both add an entry + read in the new sub menu file) opposed to before where also the config file had to be changed.

--- a/fvwm/root_menu.conf
+++ b/fvwm/root_menu.conf
@@ -19,6 +19,16 @@
 # Copyright:		CC BY-SA 4.0 <http://creativecommons.org/licenses/by-sa/4.0>
 # Latest Version:	github.com/pygospa/dotfiles	
 
+
+# Read in submenus
+Read submenus/fvwm_menu.conf
+Read submenus/internet_menu.conf
+Read submenus/mount_menu.conf
+Read submenus/multimedia_menu.conf
+Read submenus/office_menu.conf
+Read submenus/terminals_menu.conf
+
+# create root menu
 DestroyMenu RootMenu
 AddToMenu RootMenu "      <- (¯`·._ ancalagon _.·'¯) ->     " Title
 PipeRead 'echo "+ \'$(date \"+%a, %d.%m.%Y - %H:%M\")\' Nop"'
