--- a/fvwm/config
+++ b/fvwm/config
@@ -8,12 +8,8 @@
 # Copyright:		CC BY-SA 4.0 <http://creativecommons.org/licenses/by-sa/4.0>
 # Latest Version:	github.com/pygospa/dotfiles	
 
+Read desktop.conf
 Read mouse.conf
 Read root_menu.conf
-Read submenus/fvwm_menu.conf
-Read submenus/internet_menu.conf
-Read submenus/mount_menu.conf
-Read submenus/multimedia_menu.conf
-Read submenus/office_menu.conf
-Read submenus/terminals_menu.conf
+#Read keyboard.conf
 
