--- a/fvwm/desktop.conf
+++ b/fvwm/desktop.conf
@@ -21,6 +21,9 @@
 #				0 means no edge around the screen, i.e. no
 #				scrolling possible. 2 is default, 1 is best but
 #				does not work on all machines.
+#			- AddToFunc StartFunc
+#			  + I Exec fvwm-root --retain-pixmap <path-to-pic>
+#			        Allows for setting a wallpaper
 #
 # Author:		Kannan Thambiah <pygospa@gmail.com>
 # Copyright:		CC BY-SA 4.0 <http://creativecommons.org/licenses/by-sa/4.0>
@@ -29,8 +32,13 @@
 DesktopSize 3x3
 DesktopName 0 Desktop
 
-EdgeResistance 200 150
+EdgeResistance 200
 Style * EdgeMoveDelay 200
 Style * EdgeMoveResistance 150
 EdgeScroll 100000 100000
 EdgeThickness 1
+
+AddToFunc StartFunction
++ I Exec fvwm-root --retain-pixmap ${HOME}/pics/wallpapers/try_it.png
+
+
