Add xrvt-unicode to fvwm
xrvt is a very powerfull, highly configurable, ressource friendly and
transparency supporting terminal emulator and a better alternative to
aterm.

--- a/fvwm/mouse.conf
+++ b/fvwm/mouse.conf
@@ -42,5 +42,5 @@
 # middle click: Open window list
 Mouse 1 R A Menu RootMenu
 Mouse 2 R A WindowList Root NoGeometry
-Mouse 3 R A Exec aterm
+Mouse 3 R A Exec urxvt
 
