--- a/fvwm/submenus/terminals_menu.conf
+++ b/fvwm/submenus/terminals_menu.conf
@@ -14,5 +14,5 @@
 AddToMenu Terminals     "     Terminal Emulators     " Title
  + "Aterm"              Exec exec aterm
  + "Xterm" 		Exec exec xterm
-
+ + "rxvt-unicode"	Exec exec urxvt
 
