--- a/fvwm/mouse.conf
+++ b/fvwm/mouse.conf
@@ -44,3 +44,7 @@ Mouse 1 R A Menu RootMenu
 Mouse 2 R A WindowList Root NoGeometry
 Mouse 3 R A Exec urxvt
 
+# On window title bar
+Mouse 3 T A Destroy 
+Mouse 2 T A Maximize
+
