--- a/tmux.conf
+++ b/tmux.conf
@@ -22,8 +22,7 @@ set -g message-fg colour009
 set -g message-bg default
 
 # Paul Hinzes hack for vim and tmux under OS X
-# (see
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
 
 
 
