Add further os relevant parts

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,8 +5,8 @@
 #		 <---- General settings ---->
 
 # TERM settings for correct coloring and character displays
-set-option -g default-terminal xterm-256color		# for OS X 
-# set-option -g default-terminal screen-256color	# for Linux (irssi won't scroll with xterm)
+if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-terminal xterm-256color'
+if-shell 'test "$(uname)" = "Linux"' 'set-option -g default-terminal screen-256color'
 
 # initial default of 750 millisecons is to little, I think
 set -g display-time 4000
