--- a/.gitmodules
+++ b/.gitmodules
@@ -77,3 +77,6 @@
 [submodule "vim/bundle/vim-trailing-whitespace"]
 	path = vim/bundle/vim-trailing-whitespace
 	url = https://github.com/bronson/vim-trailing-whitespace.git
+[submodule "vim/bundle/TaskList.vim"]
+	path = vim/bundle/TaskList.vim
+	url = https://github.com/vim-scripts/TaskList.vim.git
