--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,8 @@ if-shell 'test "$(uname)" = "Linux"' 'set-option -g default-terminal screen-256c
 # initial default of 750 millisecons is to little, I think
 set -g display-time 4000
 
+set -s escape-time 0
+
 # update status bar every second
 set -g status-interval 1
 
