--- a/gnupg/gpg-agent.conf
+++ b/gnupg/gpg-agent.conf
@@ -1,4 +1,5 @@
+default-cache-ttl 1800
+max-cache-ttl 1800
+#pinentry-program /usr/local/MacGPG2/libexec/pinentry-mac.app/Contents/MacOS/pinentry-mac
+pinentry-program /usr/bin/pinentry-curses
 
-default-cache-ttl 60
-max-cache-ttl 720
-pinentry-program /usr/local/MacGPG2/libexec/pinentry-mac.app/Contents/MacOS/pinentry-mac
