[gpg] export keys to a fat-fs usb drive

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -4,6 +4,18 @@
 # default key
 default-key 2188D25476CD6AB808682A96E4ECA98B1F471451
 
+# default keyring?
+no-default-keyring
+
+# Key location
+keyring		/media/private/gpg/pubring.gpg
+primary-keyring	/media/private/gpg/pubring.gpg
+secret-keyring	/media/private/gpg/secring.gpg
+trustdb-name	/media/private/gpg/trustdb.gpg
+
+# don't lock keys (it's impossible due to the keys being on a fat formated stick)
+lock-never
+
 # You know me - I love UTF-8
 display-charset utf-8
 utf8-strings
