Add OS X clipboard hack

--- a/tmux.conf
+++ b/tmux.conf
@@ -20,6 +20,9 @@ set -g status-interval 1
 set -g message-fg colour009
 set -g message-bg default
 
+# Paul Hinzes hack to get the clipboard working in vim on tmux under macOS
+if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
+
 
 #		 <---- Key mappings ---->
 
