Rearange file and comments

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -1,5 +1,5 @@
-#Author:	Kannan Thambiah <pygospa@gmail.com>
-#Copyright:	CC BY-SA 4.0 <http://creativecommons.org/licenses/by-sa/4.0>
+# Author		Kannan Thambiah <pygospa@gmail.com>
+# Latest version	https://github.com/pygospa/dotfiles
 
 # default key
 default-key 2188D25476CD6AB808682A96E4ECA98B1F471451
