--- a/tmux.conf
+++ b/tmux.conf
@@ -1,108 +1,86 @@
-# Author:	Kannan Thambiah <pygospa@gmail.com>
-# Copyright:	CC BY-SA 4.0 <http://creativecommons.org/licenses/by-sa/4.0>
+# Author		Kannan Thambiah <pygospa@gmail.com>
+# Latest version	https://github.com/pygospa/dotfiles
 
 
-#		 <---- General settings ---->
-
-# TERM settings for correct coloring and character displays
+#------------------------------------------------------------------------------
+# General settings
+#
 if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-terminal xterm-256color'
 if-shell 'test "$(uname)" = "Linux"' 'set-option -g default-terminal screen-256color'
-
-# initial default of 750 millisecons is to little, I think
-set -g display-time 4000
-
-set -s escape-time 0
-
-# update status bar every second
-set -g status-interval 1
-
-# Message coloring
-set -g message-fg colour009
+set -g display-time 4000	# inital 750 ms is too little, I think
+set -s escape-time 0		# We don't want to wate for an escape sequence
+set -g status-interval 1	# Update statusbar every second
+set -g message-fg colour009	# Message coloring
 set -g message-bg default
-
 # Paul Hinzes hack to get the clipboard working in vim on tmux under macOS
 if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
 
 
-#		 <---- Key mappings ---->
-
+#------------------------------------------------------------------------------
+# General settings
+#
 # Make's life easier when first-time editing your ~/.tmux.con:
 bind r source-file ~/.tmux.conf \; \
-display-message " <--- Reloded configuration file ---> "
-
-
-
-# <-- Make tmux more like screen (I'm a victim of habbit :/ ) -->
-
-# set command prefix to ctrl+a instead of ctrl+b
-unbind C-b
+	display-message " <--- Reloded configuration file ---> "
+#							  #
+# Make tmux more like screen (I'm a victim of habbit :/ ) #
+#							  #
+unbind C-b		# set command prefix to ctrl+a instead of ctrl+b
 set -g prefix C-a
 
-# switch to last window using C-a C-a
-unbind l
+unbind l		# switch to last window using C-a C-a
 bind C-a last-window
 
-# With cntrl-a a we want to send keys to a underlying tmux
-bind a send-prefix
+bind a send-prefix	# C-a a will send keys to the parent of a nested tmux
 
+unbind '"'		# Use S for horizontal split
+bind S split-window
 
-# <-- Make tmux more like vim (I'm also a victim of comfort ;) ) -->
+unbind %		# Use V for vertical split
+bind V split-window -h
 
-# Set vim-style key bindings for copy and coices mode (e.g. hjkl navigation)
-setw -g mode-keys vi
+#							     #
+# Make tmux more like vim (I'm also a victim of comfort ;) ) #
+#							     #
+setw -g mode-keys vi	# vim-style key bindings for copy+choice mode navigation
 
-# Set vim like switching to copy mode with C-b v instead of C-b [
-unbind [
+unbind [		# vim-like switching to copy mode with C-b v
 bind v copy-mode
 
-# Set vim like paste behaviour with C-b p
-unbind p
+unbind p		# vim-like paste behaviour with C-b p
 unbind ]
 bind p paste-buffer
 
-# Set vim like marking and yanking in copy mode
-bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'v' \	# vim-like marking and yanking in copy mode
+	begin-selection
 bind -t vi-copy 'y' copy-selection
 
-# Switch panes by using hjkl instead of arrow keys
-bind h select-pane -L
+bind h select-pane -L	# switching panes by using hjkl instead of arrow keys
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-
-# <-- Some other more comfortable bindings:
-
-# Like in Screen, use S for horrizontal split instead of "
-unbind '"'
-bind S split-window
-
-# Using V for vertical split instead of %
-unbind %
-bind V split-window -h
-
+#		 #
+# Other settings #
+#		 #
 # Using < and > for resizing vertically, A and Y for horizontall (by steps of
 # five, rather than ones
 bind < resize-pane -L 5
 bind > resize-pane -R 5
 bind A resize-pane -U 5
 bind Y resize-pane -D 5
-
 # UrlView is neat! Install UrlView, configure it to use your favorit browser,
 # and then just hit ctrl-A u, whenever there's a url in your active pane.
 # You'll figure out, what it'll do, and you're gona love it!
-
 bind-key u capture-pane \; save-buffer /tmp/tmux-buffer \; new-window -n "urlview" '$SHELL -c "urlview < /tmp/tmux-buffer"'
 
 
-#		<---- Status bar ---->
-
-# Let's add some colour to our life
-set -g status-bg default
+#------------------------------------------------------------------------------
+# Status line
+#
+set -g status-bg default	# Make tmux colorful
 set -g status-fg colour003
-
-# Alignment: the tabs should appear in the center of the status bar
-set -g status-justify left
+set -g status-justify left	# Tabs aligned to the left of the status bar
 
 # On the left side we want the login information: <tmux[ID]@host>
 TNAME='#[fg=colour003]tmux#[fg=colour002][#[fg=colour001]#S#[fg=colour002]]#[fg=colour002]'
@@ -121,14 +99,17 @@ set -g window-status-current-format '#I #W'
 set -g window-status-current-fg 'colour005'
 
 
-#		<--- Pane colouring ---->
-
+#------------------------------------------------------------------------------
+# Pane coloring
+#
 set-option -g pane-active-border-fg colour005
 set-option -g pane-active-border-bg default
 set-option -g pane-border-fg colour002
 
 
-#		<---- Some automated tmux window generations ---->
+#------------------------------------------------------------------------------
+# Some automated tmux window generating settings
+#
 
 # Plain simple zsh in home dir on local machine and attach the tmux on the
 # server activating the irssi window (Window 1)
