--- a/gnupg/gpg-agent.conf
+++ b/gnupg/gpg-agent.conf
@@ -1,3 +1,6 @@
+# Author		Kannan Thambiah <pygospa@gmail.com>
+# Latest version	https://github.com/pygospa/dotfiles
+
 default-cache-ttl 1800
 max-cache-ttl 1800
 #pinentry-program /usr/local/MacGPG2/libexec/pinentry-mac.app/Contents/MacOS/pinentry-mac
