[zsh] Rearange zsh files

--- a/tmux.conf
+++ b/tmux.conf
@@ -51,8 +51,7 @@ unbind p		# vim-like paste behaviour with C-b p
 unbind ]
 bind p paste-buffer
 
-bind -t vi-copy 'v' \	# vim-like marking and yanking in copy mode
-	begin-selection
+bind -t vi-copy 'v' begin-selection	# vim-like marking+yanking in copy mode
 bind -t vi-copy 'y' copy-selection
 
 bind h select-pane -L	# switching panes by using hjkl instead of arrow keys
