[i3] Remove cpu_usage by vivien and add first own i3block (ruby >> perl)

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -10,8 +10,9 @@ interval=once
 
 [cpu_usage]
 label=
-interval=2
-min_width="000.00%"
+command=~/.i3/blocks/cpu_usage.rb
+interval=1
+format=json
 
 [memory]
 label=
