--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -11,6 +11,7 @@ interval=once
 [cpu_usage]
 label=
 command=~/.i3/blocks/cpu_usage.rb
+color=#6c71c4
 interval=1
 format=json
 
@@ -18,24 +19,28 @@ format=json
 label=
 interval=2
 min_width="15.6G/15.6G (100%)"
+color=#268bd2
 
 [bandwidth]
 label=
 instance=enp0s25
 interval=1
+color=#2aa198
 
 [disk]
 label= /
 instance=/dev/sdb4
 interval=2
+color=#859900
 
 [disk]
 label= ~
 instance=/dev/sdb3
 interval=2
+color=#859900
 
 [date]
 label=
 command=date '+%a %d.%m.%Y %T'
 interval=1
-
+color=#eee8d5
