[i3] Tweak CPU output + colors

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -1,46 +1,90 @@
+# Author		Kannan Thambiah <pygospa@gmail.com>
+# Latest Verstion	https://github.com/pygospa/dotfiles
 
+
+
+#------------------------------------------------------------------------------
 # Global properties
+#
+full_text=
+align=center
 command=~/.i3/blocks/$BLOCK_NAME
-separator_block_width=15
+separator=false
+separator_block_width=10
+color=#d33682
 
+
+
+#------------------------------------------------------------------------------
+# Tux-Icon (fa-linux [&#xf17c;]), Host name, kernel version
+#
 [host]
 label=
-command=echo -e "$(uname -n) 4.2.0-kth_3"
+color=#93a1a1
+command=echo -e "$(uname -nr)"
 interval=once
 
+[separator]
+
+
+
+#------------------------------------------------------------------------------
+# CPU USAGE
+# Tachometer-Icon (fa-tachometer [&#xf0e4;]), cores, frequency, load percentage
+# Short: Tachometer-Icon, percentage
+#
 [cpu_usage]
 label=
-command=~/.i3/blocks/cpu_usage.rb
-color=#6c71c4
+color=#859900
 interval=1
 format=json
+command=~/.i3/blocks/cpu_usage.rb
 
+[separator]
+
+
+
+#------------------------------------------------------------------------------
+# Microchip-Icon (fa-microchip [&#xf2db;]), used, available, percentage
+# Short: Microchip-Icon, percentage
+#
 [memory]
 label=
 interval=2
 min_width="15.6G/15.6G (100%)"
-color=#268bd2
+color=#2aa198
+
+[separator]
+
+
 
 [bandwidth]
 label=
 instance=enp0s25
 interval=1
-color=#2aa198
+min_width="IN 100K OUT 100K"
+color=#268bd2
+
+[separator]
 
 [disk]
 label= /
 instance=/dev/sdb4
 interval=2
-color=#859900
+color=#6c71c4
 
 [disk]
 label= ~
 instance=/dev/sdb3
 interval=2
-color=#859900
+color=#6c71c4
+
+[separator]
 
 [date]
 label=
 command=date '+%a %d.%m.%Y %T'
 interval=1
 color=#eee8d5
+
+[separator]
