[i3] Change blocks to blocklets
I prefer blocklets, and as the author of i3blocks uses both... ;)

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -38,7 +38,7 @@ label=
 color=#859900
 interval=1
 format=json
-command=~/.i3/blocks/cpu_usage.rb
+command=~/.i3/blocklets/cpu_usage.rb
 
 [separator]
 
