[i3] Replace memory block by own blocklet

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -50,11 +50,13 @@ command=~/.i3/blocklets/cpu_usage.rb
 #
 [memory]
 label=
-interval=2
-min_width="15.6G/15.6G (100%)"
 color=#2aa198
+interval=1
+format=json
+command=~/.i3/blocklets/memory.rb
 
 [separator]
+
 
 
 
