[i3] Replace disk with own implementation

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -70,16 +70,18 @@ color=#268bd2
 [separator]
 
 [disk]
-label= /
-instance=/dev/sdb4
-interval=2
+label= /:
 color=#6c71c4
+interval=2
+format=json
+command=~/.i3/blocklets/disk.rb
 
 [disk]
-label= ~
-instance=/dev/sdb3
-interval=2
+label= ~:
 color=#6c71c4
+interval=2
+format=json
+command=~/.i3/blocklets/disk.rb home
 
 [separator]
 
