--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -8,10 +8,10 @@ default-key 2188D25476CD6AB808682A96E4ECA98B1F471451
 no-default-keyring
 
 # Key location
-keyring		/media/private/gpg/pubring.gpg
-primary-keyring	/media/private/gpg/pubring.gpg
-secret-keyring	/media/private/gpg/secring.gpg
-trustdb-name	/media/private/gpg/trustdb.gpg
+keyring		~/.gnupg/pubring.gpg
+primary-keyring	~/.gnupg/pubring.gpg
+secret-keyring	~/.gnupg/secring.gpg
+trustdb-name	~/.gnupg/trustdb.gpg
 
 # don't lock keys (it's impossible due to the keys being on a fat formated stick)
 lock-never
