Ignore pulse audio files in .config

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@ backup/*
 # Pentadactyl
 pentadactyl/info
 
+# PulseAudio
+config/pulse
+
 # Things I did not create and therefore should not be distributing
 fonts
 i3/wp
@@ -30,3 +33,4 @@ i3/wp
 # Ranger
 config/ranger/bookmarks
 config/ranger/history
+
