Add debugging lines (commented)
Needed them to figure out error, I'll just leave them in, in case I need them again

--- a/gnupg/gpg-agent.conf
+++ b/gnupg/gpg-agent.conf
@@ -6,3 +6,7 @@ max-cache-ttl 1800
 #pinentry-program /usr/local/MacGPG2/libexec/pinentry-mac.app/Contents/MacOS/pinentry-mac
 pinentry-program /usr/bin/pinentry-curses
 
+# For debugging uncomment next 3 lines & replace with existing path on your pc
+#log-file /home/pygospa/.gnupg/gpg-agent.log
+#debug 1024
+#verbose
