--- a/.gitmodules
+++ b/.gitmodules
@@ -113,6 +113,7 @@
 [submodule "vim/bundle/YCM-Generator"]
 	path = vim/bundle/YCM-Generator
 	url = https://github.com/rdnetto/YCM-Generator
+	branch = stable
 	ignore = dirty
 [submodule "vim/bundle/YouCompleteMe"]
 	path = vim/bundle/YouCompleteMe
