--- a/.gitmodules
+++ b/.gitmodules
@@ -135,3 +135,6 @@
 [submodule "vim/bundle/vim-pug"]
 	path = vim/bundle/vim-pug
 	url = https://github.com/digitaltoad/vim-pug.git
+[submodule "vim/bundle/vim-ruby"]
+	path = vim/bundle/vim-ruby
+	url = https://github.com/vim-ruby/vim-ruby
