Update tmux.conf for tmux version 2.9+

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,11 +7,10 @@
 #
 if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-terminal xterm-256color'
 if-shell 'test "$(uname)" = "Linux"' 'set-option -g default-terminal screen-256color'
-set -g display-time 4000	# inital 750 ms is too little, I think
-set -s escape-time 0		# We don't want to wate for an escape sequence
-set -g status-interval 1	# Update statusbar every second
-set -g message-fg colour009	# Message coloring
-set -g message-bg default
+set -g display-time 4000		# inital 750 ms is too little, I think
+set -s escape-time 0			# We don't want to wate for an escape sequence
+set -g status-interval 1		# Update statusbar every second
+set -g message-style bg=default,fg=colour009	# Message coloring
 # Paul Hinzes hack to get the clipboard working in vim on tmux under macOS
 if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
 
@@ -51,8 +50,8 @@ unbind p		# vim-like paste behaviour with C-b p
 unbind ]
 bind p paste-buffer
 
-bind -t vi-copy 'v' begin-selection	# vim-like marking+yanking in copy mode
-bind -t vi-copy 'y' copy-selection
+# bind -t vi-copy 'v' begin-selection	# vim-like marking+yanking in copy mode
+# bind -t vi-copy 'y' copy-selection
 
 bind h select-pane -L	# switching panes by using hjkl instead of arrow keys
 bind j select-pane -D
@@ -95,15 +94,14 @@ set -g status-right-length 50
 # And now for the center part:
 set -g window-status-format '#I #W'
 set -g window-status-current-format '#I #W'
-set -g window-status-current-fg 'colour005'
+set -g window-status-current-style fg=colour005
 
 
 #------------------------------------------------------------------------------
 # Pane coloring
 #
-set-option -g pane-active-border-fg colour005
-set-option -g pane-active-border-bg default
-set-option -g pane-border-fg colour002
+set-option -g pane-active-border-style bg=default,fg=colour005
+set-option -g pane-border-style fg=colour002
 
 
 #------------------------------------------------------------------------------
