[ansible] Add vim

--- a/roles/vim/tasks/apt.yaml
+++ b/roles/vim/tasks/apt.yaml
@@ -1,8 +1,8 @@
 ---
-- name: Install zsh via apt
+- name: Install vim via apt
   become: yes
   apt:
-    name: zsh
+    name: vim
     state: latest
     update_cache: yes
     cache_valid_time: 3600
